--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">EBangBang_Rider</string>
 
     <string-array name="home_tab_name">
-        <item>新任务</item>
-        <item>正在派送中</item>
+        <!--<item>新任务</item>-->
         <item>待取货</item>
+        <item>正在派送中</item>
     </string-array>
 </resources>
