--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">EBangBang_Rider</string>
+    <string name="rules_of_management">E棒棒外卖网本着与时俱进、科学发展的理念，特推出网上订餐业务，取代传统的电话订餐模式。以打造“网上订餐最具影响力的城市美食新媒体”为追求。以“简单+快捷+服务好”三合一的模式，通过线上，线下关于各地餐饮的信息服务及互动，并为广大潜在的消费者提供当地最好的外卖信息指南和配送，以消费者创造更便捷的服务为宗旨，做到当地美食资源，优质配送服务相互融合，成为商家和外卖网消费使用用户互相沟通的良好节点，引领各大城市消费及生活新潮流。</string>
 
     <string-array name="home_tab_name">
         <!--<item>新任务</item>-->
